Refactor Support Page Styles and Add Spinner Component
- Updated Support.module.css to reflect a new design for a Creative Agency, including light-mode-first approach and new brand colors.
- Enhanced layout with background shapes, improved header styles, and responsive design adjustments.
- Removed outdated images from the Home directory to streamline assets.
- Introduced a new Spinner component with styles for various sizes and animations, enhancing loading indicators across the application.

--- a/public/locale/ar/translation.json
+++ b/public/locale/ar/translation.json
@@ -6,7 +6,7 @@
   "support": "الدعم",
   "about-us": "من نحن",
   "nav_lang": "English",
-  "shopping now": "تسوق الآن",
+  "shopping now": "تسوّق الآن",
   "select language": "اختر اللغة",
   "available languages": "اللغات المتاحة",
   "opens in new tab": "يفتح في علامة تبويب جديدة",
@@ -19,43 +19,54 @@
   "mobile_services": "الخدمات",
   "mobile_support": "الدعم",
   "mobile_main": "الرئيسية",
-  "Language_nav": " E",
+  "Language_nav": "E",
 
-  "read more": "اطلع على المزيد",
+  "read more": "اطّلع على المزيد",
   "noData": {
     "title": "لا توجد بيانات",
-    "message": "لم نتمكن من العثور على أي بيانات هنا. حاول مرة أخرى لاحقاً أو استكشف أقسام أخرى.",
+    "message": "لم نتمكن من العثور على أي بيانات هنا. حاول مرة أخرى لاحقاً أو استكشف أقساماً أخرى.",
     "goHome": "العودة للرئيسية"
   },
 
   "homePage": {
     "hero_title": "حلول برمجية متكاملة",
-    "hero_subtitle": "لنجاح اعمالك",
+    "hero_subtitle": "لنجاح أعمالك",
+    "badge_text": "حلول ذكية",
     "hero_desc_part1": "نقدم حلولاً مبتكرة تساعد الشركات على النمو والتطور في العصر الرقمي",
-    "hero_desc_part2": "مع احدث التقنيات وافضل الممارسات في التطوير",
+    "hero_desc_part2": "مع أحدث التقنيات وأفضل الممارسات في التطوير",
     "request-quote-button": "اطلب عرض سعر",
     "discover our services": "استكشف خدماتنا",
-    "aboutHomeHeading": "اكثر ما يميزنا",
-    "aboutSectionTitle": "يمكننا تقديم خدمات مميزة للعملاء",
-    "aboutSectionDescription": "شركة تميز هي شركة تقنية رائدة في المملكة العربية السعودية والشرق الاوسط، تهدف إلى تقديم حلول تقنية ذكية تلبي احتياجات الشركات والمؤسسات والافراد.",
+    "stats": {
+      "clients_count": "+500",
+      "happy_clients": "عملاء سعداء",
+      "projects_count": "+200",
+      "projects_completed": "مشاريع مكتملة",
+      "experience_years": "+10",
+      "years_experience": "سنوات خبرة",
+      "support_hours": "24/7",
+      "support_availability": "دعم متواصل"
+    },
+    "aboutHomeHeading": "أكثر ما يميّزنا",
+    "aboutSectionTitle": "نقدّم خدمات مميّزة لعملائنا",
+    "aboutSectionDescription": "شركة تميّز هي شركة تقنية رائدة في المملكة العربية السعودية والشرق الأوسط، تهدف إلى تقديم حلول تقنية ذكية تلبّي احتياجات الشركات والمؤسسات والأفراد.",
     "servicesDetailsButton": "تفاصيل خدماتنا",
     "projectsLabel": "مشروع",
     "clientsLabel": "عملاء راضون",
-    "aboutImageAlt": "عن شركة تميز",
-    "MoreThanOneHundredBrands": "اكثر من 100 علامه تجاريه تثق بنا",
-    "what are we doing?": "ما نقوم به؟",
-    "what are we doing?_desc": "توفير حلول وتطوير أداء خدمة العملاء بإنشاء مراكز اتصال مزودة بالتقنيات العالمية والخدمات السحابية المتطورة للمؤسسات والشركات ونظام الاتصال السحابي",
-    "Top Articles": "اهم المقالات",
-    "follow our newest articles": "تابع احدث مقالاتنا",
-    "keep in touch with us": "ابق على تواصل معنا",
-    "Testimonials": "التقييمات",
-    "Some of our customer testimonials": "بعض تقييمات عملائنا"
+    "aboutImageAlt": "عن شركة تميّز",
+    "MoreThanOneHundredBrands": "أكثر من 100 علامة تجارية تثق بنا",
+    "what are we doing?": "ماذا نقدّم؟",
+    "what are we doing?_desc": "توفير حلول وتطوير أداء خدمة العملاء بإنشاء مراكز اتصال مزوّدة بالتقنيات العالمية والخدمات السحابية المتطورة للمؤسسات والشركات ونظام الاتصال السحابي.",
+    "Top Articles": "أهم المقالات",
+    "follow our newest articles": "تابع أحدث مقالاتنا",
+    "keep in touch with us": "ابقَ على تواصل معنا",
+    "Testimonials": "آراء العملاء",
+    "Some of our customer testimonials": "بعض آراء عملائنا"
   },
 
   "articlePage": {
-    "heading": "اكتشف المعرفة... وكن دائمًا في المقدمة",
-    "subheading": "نشاركك المعرفة والخبرة لتبقى على اطلاع دائم بكل جديد",
-    "Top Articles": "اهم المقالات",
+    "heading": "اكتشف المعرفة... وكن دائماً في المقدمة",
+    "subheading": "نشاركك المعرفة والخبرة لتبقى على اطّلاع دائم بكل جديد",
+    "Top Articles": "أهم المقالات",
     "article details": "تفاصيل المقال",
     "share": "شارك المقال",
     "back_to_articles": "العودة للمقالات",
@@ -64,21 +75,21 @@
   },
 
   "supportPage": {
-    "heading": "معك دائمًا... لأن نجاحك يهمنا",
+    "heading": "معك دائماً... لأن نجاحك يهمّنا",
     "subheading": "نحن هنا لمساعدتك في كل خطوة، بدعم سريع وفعّال على مدار الساعة",
-    "talk with us": "تحدث معنا",
+    "talk with us": "تحدّث معنا",
     "contact with us": "تواصل معنا",
-    "contact subtitle": "نحن دائمًا على استعداد لمساعدتك. تواصل معنا عبر أي من القنوات التالية",
+    "contact subtitle": "نحن دائماً على استعداد لمساعدتك. تواصل معنا عبر أي من القنوات التالية",
     "phone": "الهاتف",
     "email": "البريد الإلكتروني",
     "whatsapp": "واتساب",
     "how can we help": "كيف يمكننا مساعدتك؟",
     "send": "إرسال",
-    "sending": "جاري الإرسال..."
+    "sending": "جارٍ الإرسال..."
   },
 
-  "about tamuizz": "عن شركة تميز",
-  "we present our services in the best way": "نلتزم بتقديم خدماتنا باعلى معايير الجوده",
+  "about tamuizz": "عن شركة تميّز",
+  "we present our services in the best way": "نلتزم بتقديم خدماتنا بأعلى معايير الجودة",
 
   "aboutSection": {
     "about-us-page-name": "من نحن",
@@ -92,9 +103,9 @@
     "cairo": "القاهرة",
     "cairo-address": "3303 طريق العروبة، حي السليمانية 18480",
     "hero-title-1": "نبني",
-    "hero-title-highlight": "التميز الرقمي",
+    "hero-title-highlight": "التميّز الرقمي",
     "hero-title-2": "معاً",
-    "hero-description": "نحن شركة تقنية رائدة في المملكة العربية السعودية والشرق الأوسط، نقدم حلولاً مبتكرة تدفع نجاح الأعمال والتحول الرقمي.",
+    "hero-description": "نحن شركة تقنية رائدة في المملكة العربية السعودية والشرق الأوسط، نقدّم حلولاً مبتكرة تدفع نجاح الأعمال والتحوّل الرقمي.",
     "get-started": "ابدأ الآن",
     "our-services": "خدماتنا",
     "stats": {
@@ -103,34 +114,34 @@
       "projects": "مشاريع مكتملة",
       "team": "أعضاء الفريق"
     },
-    "our-story": "قصتنا",
-    "story-title": "رحلة من الابتكار والتميز",
-    "story-description": "منذ تأسيسنا، التزمنا بتقديم حلول تقنية متطورة تساعد الشركات على الازدهار في العصر الرقمي. يجمع فريقنا من الخبراء بين الإبداع والخبرة التقنية لإنشاء حلول تصنع الفارق.",
-    "highlight1": "موثوق به من قبل أكثر من 500 شركة في المنطقة",
+    "our-story": "قصّتنا",
+    "story-title": "رحلة من الابتكار والتميّز",
+    "story-description": "منذ تأسيسنا، التزمنا بتقديم حلول تقنية متطوّرة تساعد الشركات على الازدهار في العصر الرقمي. يجمع فريقنا من الخبراء بين الإبداع والخبرة التقنية لإنشاء حلول تصنع الفارق.",
+    "highlight1": "موثوق به من قِبل أكثر من 500 شركة في المنطقة",
     "highlight2": "فريق دعم فني حائز على جوائز",
-    "highlight3": "حلول تقنية متطورة",
+    "highlight3": "حلول تقنية متطوّرة",
     "highlight4": "ملتزمون بنجاح العملاء",
-    "what-drives-us": "ما يحركنا",
+    "what-drives-us": "ما يحرّكنا",
     "values-section-title": "رسالتنا ورؤيتنا وقيمنا",
-    "values-section-desc": "نسترشد بالتزامنا بالتميز والابتكار وتقديم القيمة لعملائنا.",
+    "values-section-desc": "نسترشد بالتزامنا بالتميّز والابتكار وتقديم القيمة لعملائنا.",
     "mission-title": "رسالتنا",
     "mission-desc": "تمكين الشركات بحلول تقنية مبتكرة تدفع النمو والكفاءة والنجاح في العصر الرقمي.",
     "vision-title": "رؤيتنا",
-    "vision-desc": "أن نكون الشريك التقني الرائد في الشرق الأوسط، المعروف بالتميز والابتكار وخدمة العملاء الاستثنائية.",
+    "vision-desc": "أن نكون الشريك التقني الرائد في الشرق الأوسط، المعروف بالتميّز والابتكار وخدمة العملاء الاستثنائية.",
     "values-title": "قيمنا",
-    "values-desc": "النزاهة والابتكار والتميز والتركيز على العميل توجه كل ما نفعله وكل حل نقدمه.",
+    "values-desc": "النزاهة والابتكار والتميّز والتركيز على العميل توجّه كل ما نفعله وكل حل نقدّمه.",
     "why-choose-us": "لماذا تختارنا",
-    "why-choose-title": "ما يميزنا",
+    "why-choose-title": "ما يميّزنا",
     "why-choose-desc": "نجمع بين الخبرة والتفاني والابتكار لتقديم حلول تتجاوز التوقعات.",
     "why": {
       "expertise-title": "خبرة في المجال",
-      "expertise-desc": "أكثر من 10 سنوات من الخبرة في تقديم مشاريع ناجحة عبر صناعات وقطاعات متنوعة.",
+      "expertise-desc": "أكثر من 10 سنوات من الخبرة في تقديم مشاريع ناجحة عبر صناعات وقطاعات متنوّعة.",
       "support-title": "دعم على مدار الساعة",
       "support-desc": "دعم فني على مدار الساعة لضمان تشغيل أنظمتك بسلاسة في جميع الأوقات.",
       "quality-title": "ضمان الجودة",
       "quality-desc": "اختبارات صارمة ومعايير جودة تضمن حلولاً موثوقة وعالية الأداء.",
       "innovation-title": "التركيز على الابتكار",
-      "innovation-desc": "نبقى في طليعة اتجاهات التكنولوجيا لنقدم لك أحدث الحلول المتاحة."
+      "innovation-desc": "نبقى في طليعة اتجاهات التكنولوجيا لنقدّم لك أحدث الحلول المتاحة."
     },
     "our-locations": "مواقعنا",
     "branches-description": "مع مكاتب في جميع أنحاء المنطقة، نحن دائماً قريبون لخدمتك بشكل أفضل.",
@@ -141,10 +152,10 @@
     "title": "كيف نعمل",
     "description": "خطوات العمل معنا",
     "ourAchievements": "إنجازاتنا",
-    "weIncreaseSuccess": "نحن نزيد من نجاح عملائنا",
-    "clients": "عملائنا الراضون",
-    "projects": "مشاريعنا المنفذة",
-    "experts": "خبرائنا"
+    "weIncreaseSuccess": "نساهم في زيادة نجاح عملائنا",
+    "clients": "عملاء راضون",
+    "projects": "مشاريع منفّذة",
+    "experts": "خبراء"
   },
 
   "projects": {
@@ -153,9 +164,9 @@
   },
 
   "solutionPage": {
-    "heading": "نبتكر الحلول... لنحقق التميز",
-    "subheading": "نبتكر حلولًا ذكية تواكب تطلعاتك وتدفع أعمالك نحو التميز",
-    "solution_title": "نحن نقدم افضل الحلول",
+    "heading": "نبتكر الحلول... لنحقّق التميّز",
+    "subheading": "نبتكر حلولاً ذكية تواكب تطلّعاتك وتدفع أعمالك نحو التميّز",
+    "solution_title": "نقدّم أفضل الحلول",
     "solution details": "تفاصيل الحلول",
     "download_profile": "تحميل الملف التعريفي",
     "download_document": "تحميل المستند",
@@ -172,47 +183,55 @@
   },
 
   "servicesPage": {
-    "heading": "خدمات تواكب طموحك، وتصنع الفارق",
-    "subheading": "نقدم مجموعة متكاملة من الخدمات المصممة لتلائم احتياجاتك بدقة",
-    "ServicesSubTitle": "نحن نقدم افضل جوده",
+    "heading": "خدمات تواكب طموحك وتصنع الفارق",
+    "subheading": "نقدّم مجموعة متكاملة من الخدمات المصمّمة لتلائم احتياجاتك بدقة",
+    "ServicesSubTitle": "نقدّم أفضل جودة",
     "serviceDetails": "تفاصيل الخدمة",
     "explore-more": "استكشف المزيد",
     "other-services": "خدمات أخرى قد تعجبك",
     "view-all-services": "عرض جميع الخدمات"
   },
 
-  "faq": "الاسئلة الشائعة",
+  "faq": "الأسئلة الشائعة",
   "faqPage": {
-    "headline1": "حافظ على امان عملك",
-    "headline2": "وتاكد من توافره بدرجة عالية"
+    "headline1": "حافظ على أمان عملك",
+    "headline2": "وتأكّد من توافره بدرجة عالية",
+    "badge": "الأسئلة الشائعة",
+    "subtitle": "نجيب على جميع استفساراتك لمساعدتك في اتخاذ القرار الصحيح",
+    "needHelp": "تحتاج مساعدة؟",
+    "helpDesc": "فريقنا متاح للإجابة على جميع استفساراتك",
+    "contactUs": "تواصل معنا",
+    "responseTime": "وقت الرد",
+    "responseValue": "24 ساعة",
+    "totalQuestions": "الأسئلة"
   },
 
   "contact_us": "تواصل معنا",
   "email_placeholder": "البريد الإلكتروني",
-  "email_description": "يرجى إدخال عنوان بريدك الإلكتروني لتلقي آخر الاخبار والتحديثات.",
-  "quick_links": "روابط هامة",
-  "company_description": "شركة تميــّز هــي شركه تقنيــة رائــدة في الملكــة العربيــة الســعودية والــشرق الاوســط، تهـدف إلى تقديـم حلـول تقنيـة ذكيـة تلـبي احتياجـات الـشركات والمؤسسـات والافـراد",
-  "terms_condition": "الشروط والاحكام",
+  "email_description": "يرجى إدخال عنوان بريدك الإلكتروني لتلقّي آخر الأخبار والتحديثات.",
+  "quick_links": "روابط مهمّة",
+  "company_description": "شركة تميّز هي شركة تقنية رائدة في المملكة العربية السعودية والشرق الأوسط، تهدف إلى تقديم حلول تقنية ذكية تلبّي احتياجات الشركات والمؤسسات والأفراد.",
+  "terms_condition": "الشروط والأحكام",
   "privacy_policy": "سياسة الخصوصية",
   "form": {
     "name": "الاسم",
     "phone": "رقم الهاتف",
-    "email": "البريد الالكترونى",
+    "email": "البريد الإلكتروني",
     "message": "الرسالة",
     "message_placeholder": "اكتب رسالتك هنا"
   },
   "success": {
-    "Success": "تم بنجاح",
+    "Success": "تمّ بنجاح",
     "message sent successfully": "تم إرسال الرسالة بنجاح",
-    "successfully subscription": "مرحبا معك معا فى تميز",
-    "OK": "تمام"
+    "successfully subscription": "مرحباً بك معنا في تميّز",
+    "OK": "حسناً"
   },
   "errors": {
-    "Error": "حدث خطا",
-    "Must be 3 characters or more": "يجب ان تكون 3 احرف او اكثر",
+    "Error": "حدث خطأ",
+    "Must be 3 characters or more": "يجب أن تكون 3 أحرف أو أكثر",
     "Required": "مطلوب",
     "Invalid email address": "هذا البريد الإلكتروني غير صالح",
-    "Must be 10 characters or more": "يجب ان تكون 10 احرف او اكثر",
-    "Something went wrong, please try again later": "حدث خطا ما، يرجى المحاولة مرة اخرى في وقت لاحق"
+    "Must be 10 characters or more": "يجب أن تكون 10 أحرف أو أكثر",
+    "Something went wrong, please try again later": "حدث خطأ ما، يرجى المحاولة مرة أخرى لاحقاً"
   }
 }
