feat: add Arabic translations for SEO, policy, testimonials, and improve navigation styles

--- a/public/locale/ar/translation.json
+++ b/public/locale/ar/translation.json
@@ -235,5 +235,61 @@
     "Invalid email address": "هذا البريد الإلكتروني غير صالح",
     "Must be 10 characters or more": "يجب أن تكون 10 أحرف أو أكثر",
     "Something went wrong, please try again later": "حدث خطأ ما، يرجى المحاولة مرة أخرى لاحقاً"
-  }
+  },
+
+  "policy": {
+    "badge": "الخصوصية والأمان",
+    "title": "سياسة الخصوصية",
+    "subtitle": "نحن ملتزمون بحماية خصوصيتك وبياناتك الشخصية",
+    "lastUpdate": "تاريخ آخر تحديث:",
+    "june": "يونيو"
+  },
+
+  "testimonials": {
+    "clientReviews": "آراء العملاء"
+  },
+
+  "seo": {
+    "home": {
+      "title": "تميّز - حلول برمجية متكاملة",
+      "description": "شركة تميّز للحلول التقنية الرائدة في المملكة العربية السعودية والشرق الأوسط"
+    },
+    "support": {
+      "title": "الدعم الفني - تميّز",
+      "description": "تواصل معنا للحصول على الدعم الفني على مدار الساعة"
+    },
+    "about": {
+      "title": "من نحن - تميّز",
+      "description": "تعرّف على شركة تميّز وفريقنا المتميّز"
+    },
+    "services": {
+      "title": "خدماتنا - تميّز",
+      "description": "اكتشف خدماتنا المتكاملة في مجال التقنية والحلول الرقمية"
+    },
+    "solutions": {
+      "title": "حلولنا - تميّز",
+      "description": "حلول تقنية مبتكرة تناسب احتياجات عملك"
+    },
+    "articles": {
+      "title": "المقالات - تميّز",
+      "description": "اطّلع على أحدث المقالات والأخبار في عالم التقنية"
+    },
+    "faq": {
+      "title": "الأسئلة الشائعة - تميّز",
+      "description": "إجابات على الأسئلة الأكثر شيوعاً حول خدماتنا"
+    },
+    "policy": {
+      "title": "سياسة الخصوصية - تميّز",
+      "description": "اطّلع على سياسة الخصوصية وحماية البيانات"
+    }
+  },
+
+  "breadcrumb": "التنقل",
+  "close menu": "إغلاق القائمة",
+  "open menu": "فتح القائمة",
+  "navigation menu": "قائمة التنقل",
+  "loading": "جارٍ التحميل...",
+  "contact section illustration": "صورة قسم التواصل",
+  "All Copyright": "جميع الحقوق محفوظة",
+  "View All Articles": "عرض جميع المقالات"
 }
