feat: add dropdown functionality to Navbar for solutions and enhance styles for better user experience

--- a/public/locale/ar/translation.json
+++ b/public/locale/ar/translation.json
@@ -5,6 +5,7 @@
   "articles": "المقالات",
   "support": "الدعم",
   "about-us": "من نحن",
+  "view all": "عرض الكل",
   "shopping now": "تسوّق الآن",
   "select language": "اختر اللغة",
   "opens in new tab": "يفتح في علامة تبويب جديدة",
