--- a/public/locale/en/translation.json
+++ b/public/locale/en/translation.json
@@ -5,6 +5,7 @@
   "articles": "Articles",
   "support": "Support",
   "about-us": "About Us",
+  "view all": "View All",
   "shopping now": "Shop Now",
   "select language": "Select Language",
   "opens in new tab": "Opens in new tab",
