feat: update privacy policy sections in translations and refactor Policy component for improved localization

--- a/public/locale/ar/translation.json
+++ b/public/locale/ar/translation.json
@@ -256,9 +256,49 @@
   "policy": {
     "badge": "الخصوصية والأمان",
     "title": "سياسة الخصوصية",
-    "subtitle": "نحن ملتزمون بحماية خصوصيتك وبياناتك الشخصية",
+    "subtitle": "في شركة تميز، نلتزم بحماية خصوصية معلوماتك الشخصية، ونوضح في هذه السياسة كيف نقوم بجمع واستخدام وحماية البيانات.",
     "lastUpdate": "تاريخ آخر تحديث:",
-    "june": "يونيو"
+    "june": "يونيو",
+    "section1": {
+      "title": "جمع المعلومات",
+      "content": "نقوم بجمع المعلومات التالية عند استخدامك لموقعنا:",
+      "items": [
+        "معلومات اتصال مثل البريد الإلكتروني ورقم الهاتف.",
+        "معلومات تقنية مثل عنوان IP، نوع المتصفح، الصفحات التي تزورها، ومدة الاستخدام.",
+        "أي معلومات تقدمها طوعاً عبر النماذج أو استفسارات الدعم."
+      ]
+    },
+    "section2": {
+      "title": "استخدام المعلومات",
+      "content": "نستخدم البيانات التي نجمعها للأغراض التالية:",
+      "items": [
+        "تحسين تجربة المستخدم على الموقع.",
+        "الرد على الاستفسارات وتقديم الدعم الفني.",
+        "إرسال التحديثات أو العروض في حال الموافقة على ذلك.",
+        "تحليل أداء الموقع وتطوير خدماتنا."
+      ]
+    },
+    "section3": {
+      "title": "حماية البيانات",
+      "content": "نتخذ كافة الإجراءات التقنية والتنظيمية المناسبة لحماية بياناتك من الوصول غير المصرح به أو التعديل أو الفقد أو التلف."
+    },
+    "section4": {
+      "title": "مشاركة المعلومات",
+      "content": "لا نقوم ببيع أو مشاركة بياناتك الشخصية مع أي جهة خارجية، باستثناء الحالات التي يتطلبها القانون أو بموافقتك المسبقة. نستخدم ملفات تعريف الارتباط (Cookies) لتحسين تجربتك."
+    },
+    "section5": {
+      "title": "حقوقك",
+      "content": "يحق لك:",
+      "items": [
+        "طلب الاطلاع على بياناتك الشخصية التي نحتفظ بها.",
+        "طلب تعديل أو حذف معلوماتك.",
+        "سحب موافقتك في أي وقت."
+      ]
+    },
+    "section6": {
+      "title": "التعديلات",
+      "content": "قد نقوم بتحديث سياسة الخصوصية من وقت لآخر، وسيتم نشر أي تغييرات على هذه الصفحة مع تحديث تاريخ آخر تعديل."
+    }
   },
 
   "testimonials": {
