--- a/public/locale/en/translation.json
+++ b/public/locale/en/translation.json
@@ -255,9 +255,49 @@
   "policy": {
     "badge": "Privacy & Security",
     "title": "Privacy Policy",
-    "subtitle": "We are committed to protecting your privacy and personal data",
+    "subtitle": "At Tamiuzz, we are committed to protecting your personal information. This policy explains how we collect, use, and protect your data.",
     "lastUpdate": "Last Updated:",
-    "june": "June"
+    "june": "June",
+    "section1": {
+      "title": "Information Collection",
+      "content": "We collect the following information when you use our website:",
+      "items": [
+        "Contact information such as email and phone number.",
+        "Technical information such as IP address, browser type, pages visited, and usage duration.",
+        "Any information you voluntarily provide through forms or support inquiries."
+      ]
+    },
+    "section2": {
+      "title": "Use of Information",
+      "content": "We use the data we collect for the following purposes:",
+      "items": [
+        "Improving the user experience on the website.",
+        "Responding to inquiries and providing technical support.",
+        "Sending updates or offers with your consent.",
+        "Analyzing website performance and improving our services."
+      ]
+    },
+    "section3": {
+      "title": "Data Protection",
+      "content": "We take all appropriate technical and organizational measures to protect your data from unauthorized access, modification, loss, or damage."
+    },
+    "section4": {
+      "title": "Information Sharing",
+      "content": "We do not sell or share your personal data with any third party, except as required by law or with your prior consent. We use cookies to improve your experience."
+    },
+    "section5": {
+      "title": "Your Rights",
+      "content": "You have the right to:",
+      "items": [
+        "Request access to the personal data we hold about you.",
+        "Request modification or deletion of your information.",
+        "Withdraw your consent at any time."
+      ]
+    },
+    "section6": {
+      "title": "Modifications",
+      "content": "We may update the privacy policy from time to time. Any changes will be posted on this page with an updated last modified date."
+    }
   },
 
   "testimonials": {
